--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -1,6 +1,9 @@
+<script src="/static/js/screenings.js" defer></script>
 <a href="/movies" class="singleMovieReturn">Återgå till vårat utbud</a>
 <div class="singleMovie">
     <img class="singleMovie__img" src="<%= movie.attributes.image.url %>">
     <h2 class="singleMovie__title"><%= movie.attributes.title %></h2>
     <%- markedIntroText %>
 </div>
+<h2>Kommande Visningar</h2>
+    <ul id="screenings-list"></ul>
