--- a/styling/movies.scss
+++ b/styling/movies.scss
@@ -59,3 +59,24 @@
         text-align: center;
     }
 }
+
+/* //////////////////// REVIEW MODAL //////////////////*/
+
+.modal {
+    background-color: #fff;
+    padding: 0 1.8rem 1.8rem;
+    border-radius: 5px;
+    width: 25rem;
+  }
+  
+  .close-modal-button {
+    font-size: 3rem;
+    cursor: pointer;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .modal::backdrop {
+    background: rgb(0 0 0 / 0.8);
+  }
+  
