--- a/styling/main.scss
+++ b/styling/main.scss
@@ -10,6 +10,7 @@
 @use 'languageToggleBtn.scss';
 @use 'contact.scss';
 @use 'movies.scss';
+@use 'review.scss';
 
 body{
 background-color: $color-background;
