--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -5,38 +5,53 @@
   <%- markedIntroText %>
 </div>
 
-
-<button class="open-button">Show the dialog</button>
+<button class="review-modal__open">Skriv en egen recension</button>
 
 <!-- Modal-dialog -->
-<dialog class="modal" id="modal">
-    <span class="close-modal-button">&times;</span>
-    <h2 class="" id="header">Skriv en egen recension</h2>
-      <div class="send-review">
-        <form id="review-form" data-movie-id="<%= movie.id %>">
-
-            <label for="author">Namn:</label>
-            <input type="text" id="author" name="author" required />
-
-            <label for="comment">Kommentar:</label>
-            <textarea id="comment" name="comment" required></textarea>
-
-            <label for="rating">Betyg:</label>
-            <select id="rating" name="rating" required>
-            <option value="">Ditt betyg på filmen</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            </select>
-
-            <button type="submit">Skicka</button>
-        </form>
-
-        <p id="response-message"></p>
-
-        <script src="/static/js/reviews.js"></script>
+<dialog class="review-modal" id="modal">
+    <span class="review-modal__close">&times;</span>
+    <h2 class="review-modal__title" id="header">Skriv en egen recension</h2>
+  
+    <div class="review-modal__content">
+      <form class="review-form" id="review-form" data-movie-id="<%= movie.id %>">
+        
+        <!-- Betyg -->
+        <label class="review-form__label" for="rating">Vilket betyg vill du ge den här filmen:</label>
+        <div class="review-form__rating rating">
+          <input type="radio" id="star5" name="rating" value="5" class="rating__input" />
+          <label for="star5" class="rating__star">&#9733;</label>
+  
+          <input type="radio" id="star4" name="rating" value="4" class="rating__input" />
+          <label for="star4" class="rating__star">&#9733;</label>
+  
+          <input type="radio" id="star3" name="rating" value="3" class="rating__input" />
+          <label for="star3" class="rating__star">&#9733;</label>
+  
+          <input type="radio" id="star2" name="rating" value="2" class="rating__input" />
+          <label for="star2" class="rating__star">&#9733;</label>
+  
+          <input type="radio" id="star1" name="rating" value="1" class="rating__input" />
+          <label for="star1" class="rating__star">&#9733;</label>
         </div>
+  
+        <!-- Kommentar -->
+        <label class="review-form__label" for="comment">Skriv en kommentar:</label>
+        <textarea class="review-form__input" id="comment" name="comment" required></textarea>
+  
+        <!-- Namn -->
+        <label class="review-form__label" for="author">Vad är ditt namn/alias:</label>
+        <input class="review-form__input" type="text" id="author" name="author" required />
+  
+        <!-- Skicka-knapp -->
+        <button class="review-form__submit" type="submit">Skicka</button>
+      </form>
+  
+      <p class="review-modal__message" id="response-message"></p>
+    </div>
+  </dialog>
+  
+
+    <script src="/static/js/reviews.js"></script>
+  </div>
 </dialog>
-  <!-- End Modal-dialog -->
+<!-- End Modal-dialog -->
