fetch from my api and style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,11 @@
     <div class="ongoingMovies"></div>
 </section>
 
+<section class="upcomingScreenings">
+<ul class="screeningsList">
+
+</ul>
+</section>
 <!-- Karusell bottomcontent -->
 <section class="carusell2">
 
