--- a/static/main.css
+++ b/static/main.css
@@ -860,6 +860,53 @@ body .cafe-menu__container .menu-section span {
   text-align: center;
 }
 
+.screeningsList {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.movieCard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+  padding: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+}
+
+.movieScreeningImage {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 2px;
+}
+
+.movieScreeningTitle {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  margin-top: 10px;
+  font-weight: bold;
+  font-size: 16px;
+  text-align: center;
+}
+
+.movieScreeningTime {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  margin-top: 5px;
+  font-size: 14px;
+  color: #888;
+  text-align: center;
+}
+
+.movieCard:hover {
+  transform: translateY(-5px);
+}
+
 body {
   background-color: #1a323c;
   font-size: 16px;
