--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,8 +18,9 @@
     <div class="ongoingMovies"></div>
 </section>
 
-<section class="upcomingScreenings">
-<ul class="screeningsList">
+<section class="upcoming-screenings">
+    <h2 class="upcoming-screenings__title">Filmer på bio just nu</h2>
+<ul class="upcoming-screenings__list">
 
 </ul>
 </section>
