--- a/static/main.css
+++ b/static/main.css
@@ -860,13 +860,20 @@ body .cafe-menu__container .menu-section span {
   text-align: center;
 }
 
-.screeningsList {
+.upcoming-screenings__title {
+  font-family: "Poppins", sans-serif;
+  font-size: 26px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: center;
+}
+.upcoming-screenings__list {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
 
-.movieCard {
+.movie-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -875,35 +882,27 @@ body .cafe-menu__container .menu-section span {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
 }
-
-.movieScreeningImage {
+.movie-card__image {
   width: 100%;
   height: 300px;
   object-fit: cover;
   border-radius: 2px;
 }
-
-.movieScreeningTitle {
-  font-family: "Poppins", serif;
-  font-weight: 400;
-  font-style: normal;
+.movie-card__title {
+  font-family: "Poppins", sans-serif;
   margin-top: 10px;
   font-weight: bold;
   font-size: 16px;
   text-align: center;
 }
-
-.movieScreeningTime {
-  font-family: "Poppins", serif;
-  font-weight: 400;
-  font-style: normal;
+.movie-card__time {
+  font-family: "Poppins", sans-serif;
   margin-top: 5px;
   font-size: 14px;
   color: #888;
   text-align: center;
 }
-
-.movieCard:hover {
+.movie-card:hover {
   transform: translateY(-5px);
 }
 
