--- a/static/main.css
+++ b/static/main.css
@@ -860,8 +860,13 @@ body .cafe-menu__container .menu-section span {
   text-align: center;
 }
 
+.upcoming-screenings {
+  padding-left: 5rem;
+}
 .upcoming-screenings__title {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
   font-size: 26px;
   font-weight: bold;
   margin-bottom: 10px;
@@ -869,18 +874,57 @@ body .cafe-menu__container .menu-section span {
 }
 .upcoming-screenings__list {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 20px;
+}
+
+.date-section {
+  margin-bottom: 30px;
+}
+
+.date-header {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  text-transform: capitalize;
+}
+
+.date-section__header {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.hr {
+  border: none;
+  border-top: 1px solid #f1ddc5;
+  width: 90%;
+  margin-left: 0;
+  margin: 0 0 50px 0;
+}
+
+.movies-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: flex-start;
 }
 
 .movie-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 200px;
+  width: 180px;
   padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
+  border-radius: 5px;
 }
 .movie-card__image {
   width: 100%;
@@ -889,16 +933,20 @@ body .cafe-menu__container .menu-section span {
   border-radius: 2px;
 }
 .movie-card__title {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
   margin-top: 10px;
   font-weight: bold;
   font-size: 16px;
   text-align: center;
 }
 .movie-card__time {
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
   margin-top: 5px;
-  font-size: 14px;
+  font-size: 16px;
   color: #888;
   text-align: center;
 }
