--- a/styling/screenings.scss
+++ b/styling/screenings.scss
@@ -1,8 +1,9 @@
 @use './utils.scss' as *;
 
 .upcoming-screenings {
+  padding-left: 5rem;
   &__title {
-    font-family: 'Poppins', sans-serif; // Använd en korrekt font-mixin om du har den
+    @include font-poppins; 
     font-size: 26px;
     font-weight: bold;
     margin-bottom: 10px;
@@ -11,20 +12,56 @@
 
   &__list {
     display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    gap: 20px; 
   }
+}
+
+.date-section {
+  margin-bottom: 30px; 
+}
+
+.date-header{
+  @include font-poppins;
+  font-size: 1.5rem;
+  margin-bottom: 0;
+  text-transform: capitalize;
+}
+
+.date-section__header {
+  @include font-poppins;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  color: #333;
+}
+
+.hr {
+  border: none;
+  border-top: 1px solid $color-text;
+  width: 90%; 
+  margin-left: 0; 
+  margin: 0 0 50px 0;
+}
+
+.movies-row {
+  display: flex;
+  flex-wrap: wrap; 
+  gap: 15px; 
+  justify-content: flex-start; 
 }
 
 .movie-card {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 200px;
+  width: 180px; 
   padding: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-
+  border-radius: 5px;
+ 
+  
   &__image {
     width: 100%;
     height: 300px;
@@ -33,7 +70,7 @@
   }
 
   &__title {
-    font-family: 'Poppins', sans-serif;
+    @include font-poppins;
     margin-top: 10px;
     font-weight: bold;
     font-size: 16px;
@@ -41,15 +78,14 @@
   }
 
   &__time {
-    font-family: 'Poppins', sans-serif;
+    @include font-poppins;
     margin-top: 5px;
-    font-size: 14px;
+    font-size: 16px;
     color: #888;
     text-align: center;
   }
 
   &:hover {
-    transform: translateY(-5px);
+    transform: translateY(-5px); 
   }
 }
-
