First shell all parts

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -67,3 +67,18 @@
 </dialog>
 <!-- End Modal-dialog -->
 
+
+
+
+<!--Detailsitecd reviews & pagination -->
+<h2 class="singleMovie__title">Recensioner</h2>
+<div id="reviews-container">
+    <ul id="reviews-list"></ul>
+    <div class="pagination">
+        <button id="prev-page" disabled>Föregående</button>
+        <span id="page-info"></span>
+        <button id="next-page">Nästa</button>
+    </div>
+</div>
+
+<script src="/static/js/reviews.js"></script>
