--- a/static/main.css
+++ b/static/main.css
@@ -878,16 +878,12 @@ body .cafe-menu__container .menu-section span {
   gap: 20px;
 }
 
-.date-section {
-  margin-bottom: 30px;
-}
-
 .date-header {
   font-family: "Poppins", serif;
   font-weight: 400;
   font-style: normal;
   font-size: 1.5rem;
-  margin-bottom: 0;
+  margin: 0;
   text-transform: capitalize;
 }
 
@@ -906,7 +902,7 @@ body .cafe-menu__container .menu-section span {
   border-top: 1px solid #f1ddc5;
   width: 90%;
   margin-left: 0;
-  margin: 0 0 50px 0;
+  margin: 0 0 10px 0;
 }
 
 .movies-row {
