--- a/styling/screenings.scss
+++ b/styling/screenings.scss
@@ -17,14 +17,10 @@
   }
 }
 
-.date-section {
-  margin-bottom: 30px;
-}
-
 .date-header {
   @include font-poppins;
   font-size: 1.5rem;
-  margin-bottom: 0;
+  margin: 0;
   text-transform: capitalize;
 }
 
@@ -41,7 +37,7 @@
   border-top: 1px solid $color-text;
   width: 90%;
   margin-left: 0;
-  margin: 0 0 50px 0;
+  margin: 0 0 10px 0;
 }
 
 .movies-row {
