--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -68,10 +68,7 @@
 <!-- End Modal-dialog -->
 
 
-
-
-<!--Detailsitecd reviews & pagination -->
-<h2 class="singleMovie__title">Recensioner</h2>
+<!--Detailsite reviews & pagination -->
 <div id="reviews-container">
     <ul id="reviews-list"></ul>
     <div class="pagination">
