--- a/styling/main.scss
+++ b/styling/main.scss
@@ -2,7 +2,7 @@
 @use 'header.scss';
 @use 'nav.scss';
 @use 'carousel.scss';
-@use 'ongoingMovies.scss';
+@use 'filtering.scss';
 @use 'upcomingMovies.scss';
 @use 'footer.scss';
 @use 'about.scss';
@@ -11,6 +11,7 @@
 @use 'contact.scss';
 @use 'movies.scss';
 @use 'review.scss';
+@use 'topRated.scss';
 
 body{
 background-color: $color-background;
