fix/The Elements for screenings was removed now fixed

--- a/views/movie.ejs
+++ b/views/movie.ejs
@@ -4,6 +4,8 @@
   <img class="singleMovie__img" src="<%= movie.attributes.image.url %>" />
   <h2 class="singleMovie__title"><%= movie.attributes.title %></h2>
   <%- markedIntroText %>
+  <h2 class="singleMovie__title">Kommande Visningar</h2>
+  <ul id="screenings-list"></ul>
   <div class="singleMovie__rating">
     <div class="singleMovie__rating_star-empty" title="">
       <div class="singleMovie__rating_star-filled"></div>
