--- a/static/main.css
+++ b/static/main.css
@@ -130,6 +130,28 @@ header {
   }
 }
 
+.loginBtn {
+  position: absolute;
+  right: 5%;
+  top: 5%;
+  text-align: center;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #f1ddc5;
+  background-color: #1a323c;
+  border: 2px solid #f1ddc5;
+  padding-top: 12.5px;
+  width: 8rem;
+  height: 2.5rem;
+  font-size: 1rem;
+}
+.loginBtn:hover {
+  background-color: #f1ddc5;
+  color: #1a323c;
+  cursor: pointer;
+}
+
 nav {
   display: none;
 }
@@ -1077,6 +1099,41 @@ body .cafe-menu__container .menu-section span {
   transform: translateY(-5px);
 }
 
+.profileSelectionHeader {
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 2.5rem;
+  color: #f1ddc5;
+  text-align: center;
+  padding-bottom: 5rem;
+}
+
+.loginButtons {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: center;
+}
+.loginButtons__button {
+  width: 10rem;
+  height: 5rem;
+  font-family: "Poppins", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: #f1ddc5;
+  background-color: #1a323c;
+  border: 2px solid #f1ddc5;
+  font-size: 1rem;
+  text-align: center;
+  padding-top: 25px;
+}
+.loginButtons__button:hover {
+  color: #1a323c;
+  background-color: #f1ddc5;
+  cursor: pointer;
+}
+
 body {
   background-color: #1a323c;
   font-size: 16px;
@@ -1155,33 +1212,3 @@ body a {
 }
 
 /*# sourceMappingURL=main.css.map */
-
-
-
-
-/* Reviews detailsite*/
-
-.star-rating {
-  display: inline-block;
-  font-size: 1rem;
-  color: gold; 
-  margin-top: 20px;
-  margin-bottom: 0.1px;
-}
-
-.star-rating .star {
-  margin-right: 2px; 
-  
-}
-
-
-#reviews-list .author {
-  font-weight: bold; 
-  margin-top: 1px; 
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-.comment{
-  font-style: italic;
-}
