--- a/styling/main.scss
+++ b/styling/main.scss
@@ -14,6 +14,7 @@
 @use "movieRating.scss";
 @use "topRated.scss";
 @use 'screenings.scss';
+@use 'login.scss';
 
 body {
   background-color: $color-background;
